fix: modificações para integração